<resources>
    <string name="app_name">Go Translate All Languages</string>
    <string name="splash_title">ELITE <b>TRANSLATOR</b></string>
    <string name="splash_button_text">Translate</string>
    <string name="splash_privacy_policy"><b><u>Privacy Policy</u></b></string>
    <string name="splash_term_of_service"><b><u>Term of service</u></b></string>
    <string name="splash_icon_description">Translator app icon</string>
    <string name="premium_title">ELITE <font fgcolor='#ffd301'><b>TRANSLATOR</b></font></string>
    <string name="premium_label"><b>Upgrade to Premium</b></string>
    <string name="Premium_close_icon_description">TODO</string>
    <string name="text_translation_feature">Text Translator</string>
    <string name="selected_feature_checked_mark">Feature for premium users</string>
    <string name="voice_translation_feature">Voice Chat Translator</string>
    <string name="pdf_scanner_feature">PDF File Scanner</string>
    <string name="no_ads_feature">Get Rid Of Annoying Ads</string>
    <string name="card_crown_ico">This icon represent premium user.</string>
    <string name="card_title"><b>Buy Premium</b></string>
    <string name="card_message_text">Go Premium and get access to all services</string>
    <string name="default_src_lang_name">English</string>
    <string name="default_tar_lang_name">Urdu</string>
    <string name="to">To</string>
    <string name="drawer_header_premium">Get Premium</string>
    <string name="menu_item_lang_setting">App Language</string>
    <string name="menu_item_remove_ad">Remove Ad</string>
    <string name="menu_item_favourite">Favourite</string>
    <string name="menu_item_history">History</string>
    <string name="menu_item_feedback">Feedback</string>
    <string name="menu_item_rate">Rate</string>
    <string name="menu_item_share">share</string>
    <string name="menu_item_privacy_policy">Privacy Policy</string>
    <string name="menu_item_quit_app">Quit App</string>
    <string name="home_title_name"><font>LANGUAGE <b>TRANSLATOR</b></font> </string>
    <string name="tab_home">Home</string>
    <string name="tab_chat">Chat</string>
    <string name="tab_scan_pdf">Scan PDF</string>
    <string name="tab_dictionary">Dictionary</string>
    <string name="tab_screen_translation">Screen TR</string>
    <string name="feature_unavailable_offline">This feature isn\'t available offline</string>
    <string name="home_editor_empty_state">Text cannot be empty</string>
    <string name="language_not_supported">This Language is not supported</string>
    <string name="not_support_stt">Your device does not support Speech to Text.</string>
    <string name="voice_internet_disconnect">You\'re internet connection becomes off.</string>
    <string name="text_copy_label">Copied Text</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="unable_fetch_response">Didn\'t get any response against this word!</string>
    <string name="no_performed_part_a">Couldn\'t do this operation. \nBecause</string>
    <string name="no_performed_part_b">language is not supporting yet!</string>
    <string name="thanks_msg_rating">Thanks for your feedback.</string>
    <string name="not_find_app">\" unable to find market app\"</string>
    <string name="no_text_found">No Text Found!</string>
    <string name="pdf_generated">PDF file generated successfully.\n</string>
    <string name="not_find_path">Unable to get the path of the sharing file</string>
    <string name="translation_failed">Failed to translate, please retry.</string>
    <string name="check_net_connectivity">Check your Internet connection, then retry.</string>
    <string name="image_text_no_found">No Text Found in the Image, Please retry.</string>
    <string name="lang_unselected">Unselect Language is</string>
    <string name="lang_selected">Select Language is</string>
    <string name="premission_dialog_cancel_button">NOT NOW</string>
    <string name="premission_dialog_continue_button">CONTINUE</string>
    <string name="camera_premission_msg_one">To capture photos and videos, allow Elite Translator access to your camera.</string>
    <string name="camera_premission_msg_second">To get the text via scan, allow Elite Translator access to your camera. Tap Setting > Permissions, and turn Camera on.</string>
    <string name="premission_dialog_setting_button">SETTING</string>
    <string name="storage_premission_msg_one">To show media, allow Elite Translator access to your device\'s photos, media, and files.</string>
    <string name="storage_premission_msg_second">To show media, allow Elite Translator access to your device\'s photos, media, and files. Tap Setting > Permissions, and turn Storage on.</string>
    <string name="home_offline_state">You\'re offline</string>
    <string name="home_input_editor_hint">Enter Text to Translate</string>
    <string name="home_input_editor_button_name">Translate</string>
    <string name="voice_clear_chat_button">clear all</string>
    <string name="voice_empty_state_label">No Voice Conversation</string>
    <string name="scan_pdf_gallery_button">Image From Gallery</string>
    <string name="scan_pdf_camera_button">Image From Camera</string>
    <string name="search_editor_hint">Search</string>
    <string name="search_dictionary_hint">Search english language words only</string>
    <string name="search_field_empty">No Text in the search field.</string>
    <string name="language_selection_title">SELECT LANGUAGE</string>
    <string name="selection_empty_state_label">No Item Match</string>
    <string name="auto_state">Auto Detect Language</string>
    <string name="recent">Recent Languages</string>
    <string name="list_word_header">A</string>
    <string name="auto_detected">Auto Detected</string>
    <string name="favourite_title">Favourite</string>
    <string name="single_list_button">Single</string>
    <string name="multi_list_button">Multi</string>
    <string name="favourite_empty_state">No Item Found</string>
    <string name="history_title">Translate History</string>
    <string name="history_empty_state">No Item Found</string>
    <string name="rate_dialog_title">Rate Us</string>
    <string name="dialog_msg">Did you Enjoy the app?</string>
    <string name="dialog_closure_msg">If you like our app please take a moment and rate our app on play store!</string>
    <string name="logout_dialog_title">Quit</string>
    <string name="logout_dialog_msg">Do you want to Exit?</string>
    <string name="logout_positive_button">Yes</string>
    <string name="logout_cancel_button">No</string>
    <string name="pdf_gen_title">PDF</string>
    <string name="pdf_gene_translate_button">Translate</string>
    <string name="pdf_gen_save_button">Save</string>
    <string name="pdf_gen_share">Share</string>
    <string name="pdf_generate_cancel_button">cancel</string>
    <string name="pdf_generate_ok_button">ok</string>
    <string name="pdf_generate_option_one">As Text</string>
    <string name="pdf_generate_option_two">As PDF File</string>
    <string name="enter_file_name">Enter the name</string>
    <string name="pdf_generate_share_title">Share</string>
    <string name="camera_title">Scan PDF</string>
    <string name="gallery_title">GALLERY</string>
    <string name="gallery_empty_state">No Item Found</string>
    <string name="float_one_word_button">Tab to Select One</string>
    <string name="float_all_screen_button">Select All</string>
    <string name="app_lang_Activity_title">Select App Language</string>
    <string name="multi_main_fragment_title">Multi Translate All Languages</string>
    <string name="layout_add_lang_title">Translation Language\'s</string>
    <string name="layout_add_lang_empty_state">Please Add Translation Languages</string>
    <string name="layout_loading_title">Total Characters :</string>
    <string name="layout_loading_wait_msg">Translating text! Please wait...</string>
    <string name="pop_up_skip_button">Skip</string>
    <string name="pop_up_msg">Which language would you like to speak?</string>
    <string name="pop_up_select_button">Select Language</string>
    <string name="multi_add_fragment_title">Add Languages</string>
    <string name="multi_add_fragment_search_hint">Search</string>
    <string name="save_as_pdf">Save As PDF</string>
    <string name="screenCapture">To start the screen translation</string>
</resources>