<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/divider_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TranslatorSplashActivity">

    <ImageView
        android:id="@+id/logo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/splash_icon_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_splash_logo" />

    <TextView
        android:id="@+id/splash_title_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/splash_title"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:textSize="22sp"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/logo_id"
        app:layout_constraintStart_toStartOf="@+id/logo_id"
        app:layout_constraintTop_toBottomOf="@+id/logo_id" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/splash_translate_button_id"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/splash_button_text"
        android:textAllCaps="true"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="15sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/premium_divider_view_id"
        app:layout_constraintEnd_toEndOf="@+id/splash_title_id"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/splash_title_id" />

    <TextView
        android:id="@+id/splash_terms_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/splash_term_of_service"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/premium_divider_view_id"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/splash_translate_button_id" />

    <TextView
        android:id="@+id/splash_privacy_label_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        android:textColor="?attr/colorPrimary"
        android:text="@string/splash_privacy_policy"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/splash_translate_button_id"
        app:layout_constraintStart_toEndOf="@+id/premium_divider_view_id" />

    <View
        android:id="@+id/premium_divider_view_id"
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_marginBottom="24dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/splash_privacy_label_id"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/splash_terms_label_id" />


</androidx.constraintlayout.widget.ConstraintLayout>