<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/main_fragment_id">

    <activity
        android:id="@+id/remove_ad_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.TranslatorPremiumActivity"
        android:label="activity_translator_premium"
        tool:layout="@layout/activity_translator_premium" />

    <activity
        android:id="@+id/privacy_policy_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.WebActivity"
        android:label="activity_web"
        tool:layout="@layout/activity_web" />

    <dialog
        android:id="@+id/rate_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.AppRateFragment"
        android:label="fragment_app_rate"
        tool:layout="@layout/dialog_fragment_app_rate" />

    <dialog
        android:id="@+id/quit_app_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.LogoutFragment"
        android:label="fragment_logout"
        tool:layout="@layout/dialog_fragment_logout" />

    <fragment
        android:id="@+id/main_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.MainFragment"
        android:label="@string/home_title_name"
        tool:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_main_fragment_id_to_language_selection_fragment_id"
            app:destination="@id/language_selection_fragment_id"/>

        <action
            android:id="@+id/action_main_fragment_id_to_camera_fragment_id"
            app:destination="@id/camera_fragment_id" />
        <action
            android:id="@+id/action_main_fragment_id_to_translation_Fragment"
            app:destination="@id/translation_Fragment" />
        <action
            android:id="@+id/action_main_fragment_id_to_gallery_Fragment"
            app:destination="@id/gallery_Fragment" />
        <argument
            android:name="tab"
            app:argType="string"
            android:defaultValue="null" />

    </fragment>

    <fragment
        android:id="@+id/history_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.HistoryFragment"
        android:label="@string/history_title"
        tool:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_history_fragment_id_to_main_fragment_id"
            app:destination="@id/main_fragment_id" />
    </fragment>

<!--    <fragment
        android:id="@+id/share_fragment_id"
        android:name="com.maximus.elitetranslator.ShareFragment"/>-->



    <fragment
        android:id="@+id/share_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.ShareFragment"
        android:label="SHARE"
        tool:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/language_selection_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.LanguageSelectionFragment"
        android:label="@string/language_selection_title"
        tool:layout="@layout/fragment_language_selection">
        <action
            android:id="@+id/action_language_selection_fragment_id_to_main_fragment_id"
            app:destination="@id/main_fragment_id"
            app:popUpTo="@id/main_fragment_id"
            app:popUpToInclusive="true" />
        <argument
            android:name="type"
            app:argType="string"/>
        <argument
            android:name="list"
            app:argType="string"/>
        <action
            android:id="@+id/action_language_selection_fragment_id_to_camera_fragment_id"
            app:destination="@id/camera_fragment_id"
            app:popUpTo="@id/camera_fragment_id"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/camera_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.CameraFragment"
        android:label="@string/camera_title"
        tool:layout="@layout/fragment_camera">
        <action
            android:id="@+id/action_camera_fragment_id_to_gallery_Fragment"
            app:destination="@id/gallery_Fragment" />
        <action
            android:id="@+id/action_camera_fragment_id_to_main_fragment_id"
            app:destination="@id/main_fragment_id"
            app:popUpTo="@id/camera_fragment_id" />
        <action
            android:id="@+id/action_camera_fragment_id_to_language_selection_fragment_id"
            app:destination="@id/language_selection_fragment_id" />
        <argument
            android:name="moveTo"
            app:argType="string" />
        <action
            android:id="@+id/action_camera_fragment_id_to_pdfGeneratorFragment"
            app:destination="@id/pdfGeneratorFragment" />
    </fragment>

    <fragment
        android:id="@+id/gallery_Fragment"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.GalleryFragment"
        android:label="@string/gallery_title"
        tool:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_gallery_Fragment_to_camera_fragment_id"
            app:destination="@id/camera_fragment_id"
            app:popUpTo="@id/camera_fragment_id"
            app:popUpToInclusive="true" />
        <argument
            android:name="scanTab"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/translation_Fragment"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.TranslationFragment"
        android:label=""
        tool:layout="@layout/fragment_translation" />

    <fragment
        android:id="@+id/pdfGeneratorFragment"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.PdfGeneratorFragment"
        android:label="@string/pdf_gen_title"
        tool:layout="@layout/fragment_pdf_generator" >
        <action
            android:id="@+id/action_pdfGeneratorFragment_to_main_fragment_id"
            app:destination="@id/main_fragment_id" />
    </fragment>

    <fragment
        android:id="@+id/feedback_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.FeedbackFragment"
        android:label="fragment_feedback"
        tool:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/favourite_fragment_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.fragments.FavouriteFragment"
        android:label="@string/favourite_title"
        tool:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/action_favouriteFragment_to_main_fragment_id"
            app:destination="@id/main_fragment_id" />
    </fragment>

    <activity
        android:id="@+id/multi_translate_activity_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.MultiTranslateActivity"
        android:label="MultiTranslateActivity"
        tool:layout="@layout/activity_multi_translate"/>

    <activity
        android:id="@+id/change_app_lang_id"
        android:name="com.translate.translator.voice.translation.dictionary.all.language.AppLanguageActivity"
        android:label="@string/app_lang_Activity_title"
        tool:layout="@layout/activity_app_language" />


</navigation>